[package]
name = "mshp"
description = "A minimal and fast shell prompt"
version = "0.1.0"
authors = ["yuqio <niklas.sauter@gmx.de>"]
edition = "2018"
homepage = "https://github.com/yuqio/mshp"
repository = "https://github.com/yuqio/mshp"
readme = "README.md"
license = "Apache-2.0 OR MIT"
categories = ["command-line-utilities"]
keywords = ["shell", "prompt"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
envy = "0.4"
yansi = "0.5"
git2 = "0.13"
libc = "0.2"
